<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Life Counter</string>
    
    <string name="player_1_label">Player 1</string>
    <string name="player_2_label">Player 2</string>
    <string name="player_3_label">Player 3</string>
    <string name="player_4_label">Player 4</string>
    
    <!-- Menu strings -->
    <string name="new_game_label">Clear</string>
    <string name="coin_label">Coin</string>
    <string name="settings_label">Settings</string>
    <string name="about_label">About</string>
    
    
    <!-- Settings strings -->
    <string name="general">General Preferences</string>
    <string name="players">Players</string>
    <string name="number_players">Number of Players</string>
    <string name="starting_life">Starting Life</string>
    
    <string name="player_preferences">Player Preferences</string>
    
    <string name="player_theme_label">Player Theme</string>
    <string name="player_name_label">Player Name</string>
    
    <string name="input_category">Input</string>
    <string name="delay_label">Delay</string>
    <string name="delay_description">Delay between changing the score and recording the life change on the log</string>
    
    <!-- About dialog strings -->
    <string name="about_title">About Life Counter</string>
    <string name="about_text_1">Life Counter is a small utility to help you keep track of the score in the card game <i>Magic: The Gathering</i>.</string>
    <string name="about_text_2">Life Counter is © 2009-2011 Elliot Glaysher.</string>
    <string name="about_text_3">http://www.elliotglaysher.org/lifecounter/</string>
    <string name="about_text_4">This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.</string>
    <string name="about_text_5">This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.</string>
    <string name="about_text_6">This product includes software developed as part of The Android Open Source Project (http://source.android.com).</string>
    <string name="ok_label">OK</string>
</resources>
