<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/general">
		<ListPreference
			android:key="num_players"
			android:title="@string/number_players"
			android:entries="@array/num_players"
			android:entryValues="@array/num_players"
			android:dialogTitle="@string/number_players"
			android:defaultValue="2"
			/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/player_preferences"
		android:key="player_category">
		<PreferenceScreen
			android:title="@string/player_1_label"
			android:key="player_1_screen">
			<PreferenceCategory
				android:title="@string/player_1_label"
				android:key="player_1_cat">
				<org.elliotglaysher.lifecounter.widgets.DefaultEditTextPreference
					android:dialogTitle="@string/player_name_label"
					android:key="player_1_name"
					android:title="@string/player_name_label"
					android:defaultValue="@string/player_1_label">
				</org.elliotglaysher.lifecounter.widgets.DefaultEditTextPreference>
				<ListPreference
					android:entries="@array/themes"
					android:entryValues="@array/theme_values"
					android:dialogTitle="@string/player_theme_label"
					android:key="player_1_theme"
					android:title="@string/player_theme_label"
					android:defaultValue="Black">
				</ListPreference>
			</PreferenceCategory>
		</PreferenceScreen>

		<PreferenceScreen
			android:title="@string/player_2_label"
			android:key="player_2_screen">
			<PreferenceCategory
				android:title="@string/player_2_label"
				android:key="player_2_cat">
				<org.elliotglaysher.lifecounter.widgets.DefaultEditTextPreference
					android:dialogTitle="@string/player_name_label"
					android:key="player_2_name"
					android:title="@string/player_name_label"
					android:defaultValue="@string/player_2_label">
				</org.elliotglaysher.lifecounter.widgets.DefaultEditTextPreference>
				<ListPreference
					android:entries="@array/themes"
					android:entryValues="@array/theme_values"
					android:dialogTitle="@string/player_theme_label"
					android:key="player_2_theme"
					android:title="@string/player_theme_label"
					android:defaultValue="Black">
				</ListPreference>
			</PreferenceCategory>
		</PreferenceScreen>

		<PreferenceScreen
			android:title="@string/player_3_label"
			android:key="player_3_screen">
			<PreferenceCategory
				android:title="@string/player_3_label"
				android:key="player_3_cat">
				<org.elliotglaysher.lifecounter.widgets.DefaultEditTextPreference
					android:dialogTitle="@string/player_name_label"
					android:key="player_3_name"
					android:title="@string/player_name_label"
					android:defaultValue="@string/player_3_label">
				</org.elliotglaysher.lifecounter.widgets.DefaultEditTextPreference>
				<ListPreference
					android:entries="@array/themes"
					android:entryValues="@array/theme_values"
					android:dialogTitle="@string/player_theme_label"
					android:key="player_3_theme"
					android:title="@string/player_theme_label"
					android:defaultValue="Black">
				</ListPreference>
			</PreferenceCategory>
		</PreferenceScreen>

		<PreferenceScreen
			android:title="@string/player_4_label"
			android:key="player_4_screen">
			<PreferenceCategory
				android:title="@string/player_4_label"
				android:key="player_4_cat">
				<org.elliotglaysher.lifecounter.widgets.DefaultEditTextPreference
					android:dialogTitle="@string/player_name_label"
					android:key="player_4_name"
					android:title="@string/player_name_label"
					android:defaultValue="@string/player_4_label">
				</org.elliotglaysher.lifecounter.widgets.DefaultEditTextPreference>
				<ListPreference
					android:entries="@array/themes"
					android:entryValues="@array/theme_values"
					android:dialogTitle="@string/player_theme_label"
					android:key="player_4_theme"
					android:title="@string/player_theme_label"
					android:defaultValue="Black">
				</ListPreference>
			</PreferenceCategory>
		</PreferenceScreen>

	</PreferenceCategory>
</PreferenceScreen>